--- a/youtube2scratch/youtube2scratch.csproj
+++ b/youtube2scratch/youtube2scratch.csproj
@@ -76,6 +76,9 @@
     <Reference Include="AForge.Video.FFMPEG">
       <HintPath>..\External\AForge.Video.FFMPEG.dll</HintPath>
     </Reference>
+    <Reference Include="NAudio">
+      <HintPath>..\packages\NAudio.1.7.2\lib\net35\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -103,7 +106,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ImageExporter.cs" />
     <Compile Include="ScratchProject.cs" />
+    <Compile Include="WAVexporter.cs" />
     <Compile Include="YoutubeLink.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
